# eye_movement_during_interation_with_smartphone

./: .gitignore
android_code/: local.properties  settings.gradle
android_code/app/: build.gradle
android_code/app/src/main/: AndroidManifest.xml
android_code/app/src/main/res/layout/: activity_main.xml  overlay.xml
android_code/app/src/main/res/values-night/: themes.xml
android_code/gradle/wrapper/: gradle-wrapper.properties
data_analyse_code/: main.py
get_tobii_data_code/: calibrate_device_location.pptx  main.py
get_tobii_data_code/lib/: .gitattributes  MCeyegazethesisNET461.application  MCeyegazethesisNET461.exe.manifest
get_tobii_data_code/lib/seeso/: CMakeLists.txt  README.txt
get_tobii_data_code/lib/seeso/include/seeso/: error_reporter.cc  error_reporter.h  gaze_tracker.cc  gaze_tracker.h
get_tobii_data_code/lib/seeso/include/seeso/callback/: icalibration_callback.h  iface_callback.h  igaze_callback.h  iuser_status_callback.h
get_tobii_data_code/lib/seeso/include/seeso/framework/: c_api.h  c_def.h  callback_dispatcher.h  core_callback.cc  core_callback.h  dll_function.h  global_init.h
get_tobii_data_code/lib/seeso/include/seeso/util/: coord_converter_v2.h  display.h  display_cocoa.mm  display_w32.cc  matrix.h  point.h
get_tobii_data_code/utils/: commons.py
get_touch_via_adb_code/: configs.py  main.py
get_touch_via_adb_code/log/exp_0/: gesture_0.json  gesture_1.json  gesture_10.json  gesture_100.json  gesture_101.json  gesture_102.json  gesture_103.json  gesture_104.json  gesture_105.json  gesture_106.json  gesture_107.json  gesture_108.json  gesture_109.json  gesture_11.json  gesture_110.json  gesture_111.json  gesture_112.json  gesture_113.json  gesture_114.json  gesture_115.json  gesture_116.json  gesture_117.json  gesture_118.json  gesture_119.json  gesture_12.json  gesture_13.json  gesture_14.json  gesture_15.json  gesture_16.json  gesture_17.json  gesture_18.json  gesture_19.json  gesture_2.json  gesture_20.json  gesture_21.json  gesture_22.json  gesture_23.json  gesture_24.json  gesture_25.json  gesture_26.json  (+80 more)
get_touch_via_adb_code/log/exp_1/: gesture_0.json  gesture_1.json  gesture_10.json  gesture_100.json  gesture_101.json  gesture_102.json  gesture_103.json  gesture_104.json  gesture_105.json  gesture_106.json  gesture_107.json  gesture_108.json  gesture_109.json  gesture_11.json  gesture_110.json  gesture_111.json  gesture_112.json  gesture_113.json  gesture_114.json  gesture_115.json  gesture_116.json  gesture_117.json  gesture_118.json  gesture_119.json  gesture_12.json  gesture_120.json  gesture_121.json  gesture_122.json  gesture_123.json  gesture_124.json  gesture_125.json  gesture_126.json  gesture_127.json  gesture_128.json  gesture_129.json  gesture_13.json  gesture_130.json  gesture_131.json  gesture_132.json  gesture_14.json  (+93 more)
(+6 files in other folders)
